Updates to DumpUtility
This commit updates DumpUtility to:

* correct recognition of writable, BIG_ENDIAN, heap-resident IntBuffer
* make adjustments in support of Java 17+
* add usage comments
* add tests

For LongBuffer and IntBuffer, this update adds buffer description lines
for the Long/IntBuffer.